Fixed theme not changing from dark to light (#1529)
* Fixed theme not changing from dark to light

* Changed interface from any to HTMLElement

* Used correct interface instead of HTMLElement

* Fixed conditions to be inline with tests

* Changed paddings of icons to cover the entire button

* Fixed snapshots, added classnames, fixed CSS with new classnames

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -155,8 +155,13 @@ body:not(.dark) .dark-mode-only,
   background: none;
   cursor: pointer;
   color: var(--color-text-accent);
-  padding: var(--space-24) var(--space-16) calc(var(--space-24) - 2px)
-    var(--space-16);
+  padding: 0;
+}
+
+.theme-buttons {
+  font-size: 2rem;
+  padding: calc(var(--space-24) + 1rem) calc(var(--space-16) + 1rem)
+    calc(var(--space-24) - 2px + 1rem) calc(var(--space-16) + 1rem);
 }
 
 /* Start: Syntax Highlight Overrides */
@@ -510,7 +515,11 @@ details {
   }
 
   .dark-mode-toggle {
-    padding: var(--space-08);
+    padding: 0;
+  }
+
+  .theme-buttons {
+    padding: calc(var(--space-08) + 1rem);
   }
 
   .right-container .nav__tabs > a:last-child {
